--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/img/208421355-5aec41cb-2456-4c7d-9b54-0bb6206e7f8a.webp" />
+  <link rel="icon" type="image/svg+xml" href="/img/aggelosQubit.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VC - Dainty CADET</title>
+  <title>Kairos AggelosQubit Lab</title>
 </head>
 
 <body>
