--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="KAIROS AggelosQubit Lab" content="Freelance Developement">
+  <meta name="899 742 241" content="Dainty CADET">
+  <meta name="Dainty CADET" content="https://www.linkedin.com/in/dainty-c-12033415a/">
+  <meta name="AggelosQubit" content="https://github.com/AggelosQubit">
   <link rel="icon" type="image/svg+xml" href="/img/aggelosQubit.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kairos AggelosQubit Lab</title>
